--- a/package.json
+++ b/package.json
@@ -39,11 +39,15 @@
     "helmet": "^4.6.0",
     "lite-server": "^2.6.1",
     "liteserver": "^0.3.0",
+    "mongodb": "^4.1.4",
+    "mongoose": "^6.0.12",
+    "pg": "^8.7.1",
     "postman-request": "*",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "@webpack-cli/generators": "^2.4.1",
+    "@types/pg": "^8.6.1",
+    "@webpack-cli/generators": "^1.1.0",
     "concurrently": "^6.3.0",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
